# mini.project

./: .gitignore  README.md
CGPA_Calc/: CMakeLists.txt
CGPA_Calc/include/: course.hpp  main.hpp  user_interface.hpp
CGPA_Calc/src/: course.cpp  gpa_calc.cpp  main.cpp  user_interface.cpp
CGPA_Calc/tests/: CMakeLists.txt  course_tests.cpp  gpa_calc_tests.cpp
